#42: Fix to mitigate the issue on IOS where the visual continually expands (was to do with the legend being rendered the wrong way around, plus a CSS change). It's not perfect but as this happens with all the other custom visual I've tested with, I can accept it.

--- a/style/visual.less
+++ b/style/visual.less
@@ -1,8 +1,17 @@
+@import (less) "node_modules/powerbi-visuals-utils-formattingutils/lib/index.css";
 @import (less) "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.css";
 @import (less) "node_modules/powerbi-visuals-utils-chartutils/lib/index.css";
 
 .violinPlotContainer {
     position: absolute;
+}
+
+.violinPlotCanvas {
+    position: absolute;
+}
+
+svg:not(:root) {
+    overflow: hidden;
 }
 
 .violinPlotError {
